[gd_scene format=3 uid="uid://xb16pj62as3v"]

[ext_resource type="Script" uid="uid://c02ij7m6dhf0n" path="res://enemies/boss/scripts/duck_attack_spawner.gd" id="1_eob17"]

[node name="DuckAttackSpawner" type="Node2D" unique_id=205700151]
script = ExtResource("1_eob17")
spawn_cooldown = 1.5

[node name="spawn_timer" type="Timer" parent="." unique_id=685133244]
one_shot = true

[node name="active_timer" type="Timer" parent="." unique_id=1798221658]
one_shot = true

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="active_timer" to="." method="_on_active_timer_timeout"]
